src/objects/Account_Merge_Delete__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_Field_API_Name__c</fullName>
        <label>Account Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Merge Delete</label>
    <pluralLabel>Account Merge Delete</pluralLabel>
</CustomObject>